--- a/frontend/myabnotes/src/pages/auth/signup/signup.css
+++ b/frontend/myabnotes/src/pages/auth/signup/signup.css
@@ -3,36 +3,36 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height:90vh;
+    height: 90vh;
 }
 
 .center-form Form {
     max-width: 400px;
-    width:100%;
-    padding:20px;
-    border:1px solid #ccc;
-    border-radius:5px;  
+    width: 100%;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
-.center-form Form label{
+
+.center-form Form label {
     font-weight: bold;
 }
 
-.center-form Form .form-control{
+.center-form Form .form-control {
     margin-bottom: 20px;
-    padding:10px;
+    padding: 10px;
 
 }
-.center-form Form .btn
-{
+
+.center-form Form .btn {
     /* background-color: #1877f2; */
-    color:#fff;
-    border:none;
+    color: #fff;
+    border: none;
     padding: 10px 0;
 }
 
-.center-form Form .btn:hover
-{
+.center-form Form .btn:hover {
     background-color: #165ec9;
 }
